--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -11,6 +11,7 @@
         </style>
     </head>
     <body>
+        <div class="theme_wrap">
         <h1>sample page</h1>
         <h2>main</h2>
         <div class="contents" data-contents="main">
@@ -540,6 +541,7 @@ object(0) {
                 <input type="submit" value="submit!" />
             </form>
         </footer>
+        </div>
     </body>
 </html>
 <script data-broccoli-receive-message="yes">
